[gd_scene load_steps=37 format=2]

[ext_resource path="res://Resources/Textures/Entities/player3.png" type="Texture" id=1]
[ext_resource path="res://Resources/Textures/LightTRansparetn.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Entities/Player.gd" type="Script" id=3]
[ext_resource path="res://Resources/Textures/FX/pointLight.png" type="Texture" id=4]
[ext_resource path="res://Resources/Textures/Environment/background.png" type="Texture" id=5]
[ext_resource path="res://Scenes/HelperScenes/UI/Cursor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/Fonts/public-pixel-font/PublicPixel-eZPz6.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/UI/PowerupLabel.gd" type="Script" id=8]
[ext_resource path="res://Resources/Textures/Items/point.png" type="Texture" id=9]
[ext_resource path="res://Resources/Audio/FX/Barrage.wav" type="AudioStream" id=10]
[ext_resource path="res://Resources/Audio/FX/GravityWell.wav" type="AudioStream" id=11]
[ext_resource path="res://Resources/Audio/FX/Vision.wav" type="AudioStream" id=12]
[ext_resource path="res://Resources/Audio/FX/Unmaker.wav" type="AudioStream" id=13]
[ext_resource path="res://Resources/Audio/FX/OverSheild.wav" type="AudioStream" id=14]
[ext_resource path="res://Resources/Audio/FX/GainBomb.wav" type="AudioStream" id=15]
[ext_resource path="res://Resources/Audio/FX/BulletTime.wav" type="AudioStream" id=16]
[ext_resource path="res://Resources/Audio/FX/LaserCharge.wav" type="AudioStream" id=17]
[ext_resource path="res://Resources/Audio/FX/BulletFire.wav" type="AudioStream" id=18]
[ext_resource path="res://Resources/Audio/FX/BombDeploy.wav" type="AudioStream" id=19]
[ext_resource path="res://Resources/Audio/FX/Opalescence.wav" type="AudioStream" id=20]
[ext_resource path="res://Resources/Audio/FX/EnemyExplosion.wav" type="AudioStream" id=21]
[ext_resource path="res://Resources/Audio/FX/PlayerExplosion.wav" type="AudioStream" id=22]
[ext_resource path="res://Resources/Audio/FX/OneUp.wav" type="AudioStream" id=23]
[ext_resource path="res://Resources/Audio/FX/BullletFailedHit.wav" type="AudioStream" id=24]
[ext_resource path="res://Resources/Audio/FX/IncendiaryBulletFire.wav" type="AudioStream" id=25]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 35 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 86.41
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.2
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 4 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 86.41
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 500.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_random = 1.0
color_ramp = SubResource( 6 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.810811 )
colors = PoolColorArray( 0, 0, 0, 0, 0.951351, 0.951351, 0.951351, 0.951351 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 160.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.1
orbit_velocity_random = 1.0
radial_accel = -200.0
scale = 20.0
scale_random = 0.72
color_ramp = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 7 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 16
collision_mask = 7
script = ExtResource( 3 )
speed = 480.0
shrink_scalar = 0.995
min_scale = 0.3
bullets_per_burst = 1
powerup_times = {
"Barrage": 5.0,
"Bombastic": 3.0,
"BulletTime": 1.0,
"GravityWell": 10.0,
"Incendiary": 5.0,
"Opalescence": 10.0,
"OpalescenceColorShift": 0.05,
"Unmaker": 10.0,
"Vision": 15.0
}

[node name="Background" type="Sprite" parent="."]
visible = false
modulate = Color( 0.192157, 0.192157, 0.192157, 1 )
position = Vector2( -152.5, -292.5 )
scale = Vector2( 100, 100 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.419608 )
texture = ExtResource( 1 )

[node name="InnerLight" type="Light2D" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )
texture_scale = 1.5
energy = 4.0
shadow_enabled = true

[node name="OuterLight" type="Light2D" parent="."]
position = Vector2( 15, 7.25006 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
texture_scale = 1.8
energy = 3.0
shadow_enabled = true

[node name="MidLight" type="Light2D" parent="OuterLight"]
texture = ExtResource( 2 )
texture_scale = 0.9
energy = 3.0
shadow_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 50
lifetime = 4.0
process_material = SubResource( 2 )

[node name="Particles2D2" type="Particles2D" parent="."]
amount = 20
local_coords = false
process_material = SubResource( 5 )

[node name="LaserChargeEffect" type="Particles2D" parent="."]
emitting = false
amount = 25
speed_scale = 3.0
process_material = SubResource( 9 )

[node name="BulletBurstTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BulletCooldownTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="LaserCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="LaserChargeTimer" type="Timer" parent="."]
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Cursor" parent="." instance=ExtResource( 6 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PowerupLabel" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 145.0
margin_top = 164.0
margin_right = 1169.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 10 )
text = "Bombastic"
align = 1
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="CanvasLayer/PowerupLabel"]

[node name="PowerupTimers" type="Node2D" parent="."]

[node name="Barrage" type="Timer" parent="PowerupTimers"]
wait_time = 4.0
one_shot = true

[node name="Bombastic" type="Timer" parent="PowerupTimers"]
wait_time = 2.0
one_shot = true

[node name="BulletTime" type="Timer" parent="PowerupTimers"]
one_shot = true

[node name="GravityWell" type="Timer" parent="PowerupTimers"]
wait_time = 10.0
one_shot = true

[node name="Incendiary" type="Timer" parent="PowerupTimers"]
wait_time = 8.0
one_shot = true

[node name="Opalescence" type="Timer" parent="PowerupTimers"]
wait_time = 10.0
one_shot = true

[node name="OpalescenceColorShift" type="Timer" parent="PowerupTimers"]
wait_time = 0.05

[node name="Unmaker" type="Timer" parent="PowerupTimers"]
wait_time = 4.0

[node name="Vision" type="Timer" parent="PowerupTimers"]
wait_time = 12.0
one_shot = true

[node name="SoundFX" type="Node2D" parent="."]

[node name="BarrageAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 10 )
script = ExtResource( 26 )

[node name="BombasticAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 10 )
script = ExtResource( 26 )

[node name="BombUpAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 15 )
script = ExtResource( 26 )

[node name="BulletTimeAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 16 )
script = ExtResource( 26 )

[node name="BulletFireAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 18 )
script = ExtResource( 26 )

[node name="BulletHitFail" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 24 )
pitch_scale = 1.47
script = ExtResource( 26 )

[node name="DropBombAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 19 )
script = ExtResource( 26 )

[node name="GravityWellAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 11 )
script = ExtResource( 26 )

[node name="IncendiaryAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 10 )
script = ExtResource( 26 )

[node name="IncendiaryBulletFire" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 25 )
pitch_scale = 0.41
script = ExtResource( 26 )

[node name="PlayerExplosionSound" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 22 )
script = ExtResource( 26 )

[node name="OneUpAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 23 )
script = ExtResource( 26 )

[node name="OpalescenceAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 20 )
script = ExtResource( 26 )

[node name="OverSheildAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 14 )
script = ExtResource( 26 )

[node name="UnmakerAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 13 )
pitch_scale = 0.7
script = ExtResource( 26 )

[node name="VisionAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 12 )
script = ExtResource( 26 )

[node name="LaserChargeAudio" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 17 )
script = ExtResource( 26 )

[node name="EnemyExplosionSound" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource( 21 )
script = ExtResource( 26 )

[node name="SheildSprite" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.0235294 )
position = Vector2( 0, -5 )
scale = Vector2( 2.39024, 2.39024 )
texture = ExtResource( 9 )

[connection signal="timeout" from="BulletBurstTimer" to="." method="_on_BulletBurstTimer_timeout"]
[connection signal="timeout" from="BulletCooldownTimer" to="." method="_on_BulletCooldownTimer_timeout"]
[connection signal="timeout" from="LaserCooldownTimer" to="." method="_on_LaserCooldownTimer_timeout"]
[connection signal="timeout" from="LaserChargeTimer" to="." method="_on_LaserChargeTimer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="CanvasLayer/PowerupLabel/Timer" to="CanvasLayer/PowerupLabel" method="_on_Timer_timeout"]
[connection signal="timeout" from="PowerupTimers/Barrage" to="." method="_on_Barrage_timeout"]
[connection signal="timeout" from="PowerupTimers/Bombastic" to="." method="_on_Bombastic_timeout"]
[connection signal="timeout" from="PowerupTimers/BulletTime" to="." method="_on_BulletTime_timeout"]
[connection signal="timeout" from="PowerupTimers/GravityWell" to="." method="_on_GravityWell_timeout"]
[connection signal="timeout" from="PowerupTimers/Incendiary" to="." method="_on_Incendiary_timeout"]
[connection signal="timeout" from="PowerupTimers/Opalescence" to="." method="_on_Opalescence_timeout"]
[connection signal="timeout" from="PowerupTimers/OpalescenceColorShift" to="." method="_on_OpalescenceColorShift_timeout"]
[connection signal="timeout" from="PowerupTimers/Unmaker" to="." method="_on_Unmaker_timeout"]
[connection signal="timeout" from="PowerupTimers/Vision" to="." method="_on_Vision_timeout"]
